--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/reset.css" />
-  </head>
-  <body>
-    <load ="./1-gallery.html" />
-    <load ="./2-form.html" />
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vanilla App Template</title>
+  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="./css/reset.css" />
+</head>
+
+<body>
+  <ul>
+    <li>
+      <a href="./1-gallery.html">1-gallery</a>
+    </li>
+    <li>
+      <a href="./2-form.html">2-form</a>
+    </li>
+  </ul>
+</body>
+
 </html>
